config/objects/Shipment__c.object
<CustomObject>
    <fields>
        <fullName>Carrier_Invoice_Approved__c</fullName>
        <formula>if( Carrier_Load__r.Invoice_Approved__c ,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <label>Carrier Invoice Approved</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier_Load_Tender_Status__c</fullName>
        <formula>Carrier_Load__r.Tender_Response__c</formula>
        <label>Carrier Load Tender Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier_Load__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Carrier Load</label>
        <referenceTo>Load__c</referenceTo>
        <relationshipLabel>Shipments (Carrier Load)</relationshipLabel>
        <relationshipName>Shipments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commission_Expense__c</fullName>
        <label>Commission Expense</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commission_Owner__c</fullName>
        <formula>Carrier_Load__r.Tender__r.Owner__r.FirstName  &amp; &quot; &quot; &amp; Carrier_Load__r.Tender__r.Owner__r.LastName</formula>
        <label>Commission Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commission_Payments__c</fullName>
        <label>Commission Payments</label>
        <summarizedField>Commission__c.Amount__c</summarizedField>
        <summaryForeignKey>Commission__c.Shipment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Commission__c</fullName>
        <formula>max(Carrier_Load__r.Commission_Rate__c * Team_Revenue__c,0)</formula>
        <label>Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Commodity__c</fullName>
        <label>Commodity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consignee</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Shipments (Consignee)</relationshipLabel>
        <relationshipName>Consignee_Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consolidation_Allowed__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Consolidation Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_Pct__c</fullName>
        <formula>if (and(not(isnull(Cost__c)),not(isnull(Revenue__c))),Cost__c / Revenue__c,null)</formula>
        <label>Cost Pct</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Invoice_Approved__c</fullName>
        <formula>if( Customer_Load__r.Invoice_Approved__c ,&quot;Yes&quot;,&quot;No&quot;)</formula>
        <label>Customer Invoice Approved</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Load_Tender_Status__c</fullName>
        <formula>text(Customer_Load__r.Tender__r.Response__c)</formula>
        <label>Customer Load Tender Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Load__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Load</label>
        <referenceTo>Load__c</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Customer_Shipments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Deliver_By_Date__c</fullName>
        <label>Deliver By Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deliver_By_Hour__c</fullName>
        <label>Deliver By Hour</label>
        <picklist>
            <picklistValues>
                <fullName>00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deliver_By_Minute__c</fullName>
        <label>Deliver By Minute</label>
        <picklist>
            <picklistValues>
                <fullName>00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deliver_By__c</fullName>
        <formula>if(not(isnull(Deliver_By_Date__c)),text(month(Deliver_By_Date__c))&amp;&quot;/&quot;&amp;text(day(Deliver_By_Date__c))&amp;&quot;/&quot;&amp;text(year(Deliver_By_Date__c)),&quot;&quot;)&amp;
if(and(not(isnull(Deliver_By_Date__c)),not(isblank(text(Deliver_By_Hour__c))),not(isblank(text(Deliver_By_Minute__c)))),&quot; @ &quot;,&quot;&quot;)&amp;
if(and(not(isblank(text(Deliver_By_Hour__c))),not(isblank(text(Deliver_By_Minute__c)))),text(Deliver_By_Hour__c)&amp;&quot;:&quot;&amp;lpad(text(Deliver_By_Minute__c),2,&quot;0&quot;),&quot;&quot;)</formula>
        <label>Deliver By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Director_Profit_Share_Expense__c</fullName>
        <label>Director Profit Share Expense</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Director_Profit_Share_Payments__c</fullName>
        <label>Director Profit Share Payments</label>
        <summarizedField>Profit_Share_Payment__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Profit_Share_Payment__c.Type__c</field>
            <operation>equals</operation>
            <value>Director</value>
        </summaryFilterItems>
        <summaryForeignKey>Profit_Share_Payment__c.Shipment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <label>Equipment</label>
        <picklist>
            <picklistValues>
                <fullName>Van</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refrigerated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flatbed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gross_Profit_Pct__c</fullName>
        <formula>if(not(isnull(Gross_Profit__c)),Gross_Profit__c/Revenue__c,null)</formula>
        <label>Gross Profit Pct</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Gross_Profit__c</fullName>
        <formula>if(and(Revenue__c &gt; 0,Cost__c &gt; 0),Revenue__c - Cost__c,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Intermodal_Allowed__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Intermodal Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Temp__c</fullName>
        <label>Max Temp</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Temp__c</fullName>
        <label>Min Temp</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity__c</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Overhead_Expense__c</fullName>
        <label>Overhead Expense</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <formula>Carrier_Load__r.Tender__r.Owner__c</formula>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PalletHeight__c</fullName>
        <label>Pallet Height</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PalletSpots__c</fullName>
        <label>Pallet Spots</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pallets__c</fullName>
        <label>Pallets</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pieces__c</fullName>
        <label>Pieces</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Profit_Pct__c</fullName>
        <formula>Profit__c / Revenue__c</formula>
        <label>Profit Pct</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Profit__c</fullName>
        <formula>Sales_Tax__c + (Gross_Profit__c - Team_Profit__c - Team_Profit_Share_Expense__c - Director_Profit_Share_Expense__c)</formula>
        <label>Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ready_By_Date__c</fullName>
        <label>Ready By Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ready_By_Hour__c</fullName>
        <label>Ready By Hour</label>
        <picklist>
            <picklistValues>
                <fullName>00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ready_By_Minute__c</fullName>
        <label>Ready By Minute</label>
        <picklist>
            <picklistValues>
                <fullName>00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ready_By__c</fullName>
        <formula>if(not(isnull(Ready_By_Date__c)),text(month(Ready_By_Date__c))&amp;&quot;/&quot;&amp;text(day(Ready_By_Date__c))&amp;&quot;/&quot;&amp;text(year(Ready_By_Date__c)),&quot;&quot;)&amp;
if(and(not(isnull(Ready_By_Date__c)),not(isblank(text(Ready_By_Hour__c))),not(isblank(text(Ready_By_Minute__c)))),&quot; @ &quot;,&quot;&quot;)&amp;
if(and(not(isblank(text(Ready_By_Hour__c))),not(isblank(text(Ready_By_Minute__c)))),text(Ready_By_Hour__c)&amp;&quot;:&quot;&amp;lpad(text(Ready_By_Minute__c),2,&quot;0&quot;),&quot;&quot;)</formula>
        <label>Ready By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <label>Revenue</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Max__c</fullName>
        <formula>(Revenue__c/Customer_Load__r.Revenue__c) * Customer_Load__r.Sales_Tax_Schedule__r.Load_Maximum__c</formula>
        <label>Sales Tax Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Min__c</fullName>
        <formula>(Revenue__c/Customer_Load__r.Revenue__c) *  Customer_Load__r.Sales_Tax_Schedule__r.Load_Minimum__c</formula>
        <label>Sales Tax Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Pct__c</fullName>
        <formula>Sales_Tax__c / Revenue__c</formula>
        <label>Sales Tax Percent</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Rate__c</fullName>
        <formula>Customer_Load__r.Sales_Tax_Schedule__r.Rate__c</formula>
        <label>Sales Tax Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Tax__c</fullName>
        <formula>min(max(Sales_Tax_Min__c,Sales_Tax_Rate__c*Revenue__c),min(Sales_Tax_Rate__c * Revenue__c,Sales_Tax_Max__c))</formula>
        <label>Sales Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shipper__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipper</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stackable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stackable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Team_Name__c</fullName>
        <formula>Carrier_Load__r.Team__r.Name</formula>
        <label>Team Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Profit_Pct__c</fullName>
        <formula>if (not(isnull(Team_Profit__c)),Team_Profit__c / Team_Revenue__c,null)</formula>
        <label>Team Profit Pct</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Team_Profit_Share_Expense__c</fullName>
        <label>Team Profit Share Expense</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Team_Profit_Share_Payments__c</fullName>
        <label>Team Profit Share Payments</label>
        <summarizedField>Profit_Share_Payment__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Profit_Share_Payment__c.Type__c</field>
            <operation>equals</operation>
            <value>Team</value>
        </summaryFilterItems>
        <summaryForeignKey>Profit_Share_Payment__c.Shipment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Team_Profit__c</fullName>
        <formula>Revenue__c -  Cost__c -  Sales_Tax__c -  Commission__c -  Overhead_Expense__c</formula>
        <label>Team Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Team_Revenue_Pct__c</fullName>
        <formula>if (and(not(isnull(Revenue__c)),not(isnull(Team_Revenue__c))),Team_Revenue__c / Revenue__c,null)</formula>
        <label>Team Revenue Pct</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Team_Revenue__c</fullName>
        <formula>Revenue__c - Cost__c - Sales_Tax__c</formula>
        <label>Team Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <formula>Carrier_Load__r.Team__c</formula>
        <label>Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp__c</fullName>
        <formula>if(and(not(isnull(Min_Temp__c)),not(isnull(Max_Temp__c))),text(Min_Temp__c)&amp; &quot;°&quot; &amp; &quot; to &quot; &amp; text(Max_Temp__c)&amp; &quot;°&quot;,&quot;&quot;) &amp;
if(and(not(isnull(Min_Temp__c)),isnull(Max_Temp__c)),&quot;Above &quot; &amp; text(Min_Temp__c)&amp; &quot;°&quot;,&quot;&quot;) &amp;
if(and(not(isnull(Max_Temp__c)),isnull(Min_Temp__c)),&quot;Below &quot; &amp; text(Max_Temp__c) &amp; &quot;°&quot;,&quot;&quot;) &amp;
if(and(isnull(Min_Temp__c),isnull(Max_Temp__c)),&quot;&quot;,&quot;&quot;)</formula>
        <label>Temp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Shipment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>Shipper__c</columns>
        <columns>Ready_By__c</columns>
        <columns>Consignee__c</columns>
        <columns>Deliver_By__c</columns>
        <columns>Temp__c</columns>
        <columns>Weight__c</columns>
        <columns>PalletSpots__c</columns>
        <columns>Revenue__c</columns>
        <columns>Cost__c</columns>
        <columns>Gross_Profit__c</columns>
        <columns>Gross_Profit_Pct__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>BOOKED_NEEDING_CARRIER_LOAD</fullName>
        <columns>NAME</columns>
        <columns>Consignee__c</columns>
        <columns>Cost__c</columns>
        <columns>Customer__c</columns>
        <columns>Customer_Load__c</columns>
        <columns>Deliver_By__c</columns>
        <columns>Deliver_By_Date__c</columns>
        <columns>Deliver_By_Hour__c</columns>
        <columns>Deliver_By_Minute__c</columns>
        <columns>Equipment__c</columns>
        <columns>Gross_Profit__c</columns>
        <columns>Gross_Profit_Pct__c</columns>
        <columns>Is_Editable__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Customer_Load_Tender_Status__c</field>
            <operation>equals</operation>
            <value>ACCEPTED</value>
        </filters>
        <filters>
            <field>Carrier_Load__c</field>
            <operation>equals</operation>
        </filters>
        <label>BOOKED NEEDING CARRIER LOAD</label>
    </listViews>
    <nameField>
        <displayFormat>S-{0}</displayFormat>
        <label>Shipment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Consignee_Is_Not_Null</fullName>
        <active>true</active>
        <errorConditionFormula>Consignee__c = null</errorConditionFormula>
        <errorMessage>A consignee must be entered for a shipment.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dates_are_Required</fullName>
        <active>true</active>
        <errorConditionFormula>or(isnull(Ready_By_Date__c),isnull(Deliver_By_Date__c))</errorConditionFormula>
        <errorMessage>Shipments must have dates.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Deliver_After_Ready_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Ready_By_Date__c &gt; Deliver_By_Date__c</errorConditionFormula>
        <errorDisplayField>Deliver_By_Date__c</errorDisplayField>
        <errorMessage>The deliver by date must be on or after the ready by date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Delivr_By_Date_and_Time_Must_Be_Complete</fullName>
        <active>true</active>
        <errorConditionFormula>or(and(isnull(Deliver_By_Date__c),or(not(isblank(text(Deliver_By_Hour__c))),not(isblank(text(Deliver_By_Minute__c))))),and(isblank(text(Deliver_By_Hour__c)),not(isblank(text(Deliver_By_Minute__c)))),and(isblank(text(Deliver_By_Minute__c)),not(isblank(text(Deliver_By_Hour__c)))))</errorConditionFormula>
        <errorDisplayField>Deliver_By_Date__c</errorDisplayField>
        <errorMessage>You may enter a date without a time, but not a time without a date. All times must include hours and minutes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Pallets_Must_Be_Positive_and_Reasonable</fullName>
        <active>true</active>
        <errorConditionFormula>or(Pallets__c &lt; 0,Pallets__c &gt; 100)</errorConditionFormula>
        <errorDisplayField>Pallets__c</errorDisplayField>
        <errorMessage>Pallets must be a positive number and less than 100.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Palletsp_Must_Be_Positive_and_Reasonable</fullName>
        <active>true</active>
        <errorConditionFormula>or(PalletSpots__c &lt; 0,PalletSpots__c &gt; 50)</errorConditionFormula>
        <errorDisplayField>PalletSpots__c</errorDisplayField>
        <errorMessage>Pallets must be a positive number and less than 50.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Pieces_must_be_a_positive_number</fullName>
        <active>true</active>
        <errorConditionFormula>Pieces__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Pieces__c</errorDisplayField>
        <errorMessage>Pieces must be a positive number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ready_By_Date_and_Time_Must_Be_Complete</fullName>
        <active>true</active>
        <errorConditionFormula>or(and(isnull(Ready_By_Date__c),or(not(isblank(text(Ready_By_Hour__c))),not(isblank(text(Ready_By_Minute__c))))),and(isblank(text(Ready_By_Hour__c)),not(isblank(text(Ready_By_Minute__c)))),and(isblank(text(Ready_By_Minute__c)),not(isblank(text(Ready_By_Hour__c)))))</errorConditionFormula>
        <errorDisplayField>Ready_By_Date__c</errorDisplayField>
        <errorMessage>You may enter a date without a time, but not a time without a date. All times must include hours and minutes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Shipper_Is_Not_Null</fullName>
        <active>true</active>
        <errorConditionFormula>Shipper__c = null</errorConditionFormula>
        <errorMessage>A shipper must be entered for a shipment.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Temperature</fullName>
        <active>true</active>
        <errorConditionFormula>or(Min_Temp__c &lt; -50,Min_Temp__c &gt; 100, Max_Temp__c &lt; -50, Max_Temp__c &gt; 100, Max_Temp__c &lt; Min_Temp__c)</errorConditionFormula>
        <errorDisplayField>Max_Temp__c</errorDisplayField>
        <errorMessage>Temperatures must be between -50 and 100 degrees. If you enter a max temp and a min temp, the max temp cannot be a smaller number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Weight_Must_Be_Positive_And_Reasonable</fullName>
        <active>true</active>
        <errorConditionFormula>or(Weight__c &lt; 0,Weight__c &gt; 50000)</errorConditionFormula>
        <errorDisplayField>Weight__c</errorDisplayField>
        <errorMessage>Weight must be a positive number and less than 50,000.</errorMessage>
    </validationRules>
</CustomObject>